incremental change as part of a larger frenzy of activity

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// For Travis-CI
 // We use a multi-project build to run tests on Travis-CI.
 // Non-Gradle projects are configured here, so we can execute command-line stuff.
 
