--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 // These projects are tested by Travis CI.
 
-include 'groovy','java','kotlin','python','ruby','scala'
+include 'groovy','java','javascript','kotlin','python','ruby','scala'
