incremental change as part of a larger frenzy of activity

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: groovy
 
+sudo: required
+
 env:
 - GRADLE_OPTS="-Xmx512m -XX:MaxPermSize=512m"
 
 notifications:
   email: false
+
+before_install:
+    - wget http://services.gradle.org/distributions/gradle-2.14.1-bin.zip
+    - unzip gradle-2.14.1-bin.zip
+    - export GRADLE_HOME=$PWD/gradle-2.14.1
+    - export PATH=$GRADLE_HOME/bin:$PATH
