--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ def runCommand = { command, workingDir ->
 println "TRACER ---------------------- OCT 22 18:09 sanity check"
 
 configure(subprojects.find {it.name == 'javascript'}) {
-    task test << {
+    task check << {
         def retVal = runCommand("npm run test-single-run", projectDir)
         assert retVal == 0
         println "TRACER javascript tests passed"
@@ -31,7 +31,7 @@ configure(subprojects.find {it.name == 'javascript'}) {
 }
 
 configure(subprojects.find {it.name == 'python'}) {
-    task test << {
+    task check << {
         def retVal = runCommand("python test_gol.py", projectDir)
         assert retVal == 0
         println "TRACER python tests passed"
@@ -39,7 +39,7 @@ configure(subprojects.find {it.name == 'python'}) {
 }
 
 configure(subprojects.find {it.name == 'ruby'}) {
-    task test << {
+    task check << {
         def retVal = runCommand("rake test", projectDir)
         assert retVal == 0
         println "TRACER ruby tests passed"
