incremental change as part of a larger frenzy of activity

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 // These projects are tested by Travis CI.
-
-include 'groovy','java','javascript','kotlin','python','ruby','scala'
+//
+// TODO: figure out the problem with Ruby (probably a requirement
+// within Rake)
+include 'groovy','java','javascript','kotlin','python','scala'
