--- a/build.gradle
+++ b/build.gradle
@@ -23,20 +23,24 @@ def runCommand = { command, workingDir ->
 println "TRACER ---------------------- "
 
 configure(subprojects.find {it.name == 'javascript'}) {
-    task check << {
-        def retVal = runCommand("npm install", projectDir)
-        assert retVal == 0
-        retVal = runCommand("npm run test-single-run", projectDir)
-        assert retVal == 0
-        println "TRACER javascript tests passed"
+    task check {
+        doLast {
+            def retVal = runCommand("npm install", projectDir)
+            assert retVal == 0
+            retVal = runCommand("npm run test-single-run", projectDir)
+            assert retVal == 0
+            println "TRACER javascript tests passed"
+        }
     }
 }
 
 configure(subprojects.find {it.name == 'python'}) {
-    task check << {
-        def retVal = runCommand("python test_gol.py", projectDir)
-        assert retVal == 0
-        println "TRACER python tests passed"
+    task check {
+        doLast {
+            def retVal = runCommand("python test_gol.py", projectDir)
+            assert retVal == 0
+            println "TRACER python tests passed"
+        }
     }
 }
 
