--- a/groovy/build.gradle
+++ b/groovy/build.gradle
@@ -2,11 +2,11 @@
 apply plugin: 'groovy'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.7'
+    compile 'org.codehaus.groovy:groovy-all:2.4.9'
 
     compile 'junit:junit:4.12'
 }
