--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -2,9 +2,9 @@
 // http://peidevs.github.io
 
 buildscript {
-  ext.kotlin_version = '1.0.4'
+  ext.kotlin_version = '1.1.4'
   repositories {
-    mavenCentral()
+    jcenter()
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -14,11 +14,12 @@ buildscript {
 apply plugin: 'kotlin'
 
 repositories {
-  mavenCentral()
+  jcenter()
 }
 
 dependencies {
   compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
   testCompile 'junit:junit:4.12'
   testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
