--- a/scala/build.gradle
+++ b/scala/build.gradle
@@ -2,11 +2,14 @@
 apply plugin: 'scala'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile 'org.scala-lang:scala-library:2.12.3'
+    compile 'org.scala-lang:scala-library:2.11.7'
 
-    testCompile group: 'org.specs2', name: 'specs2_2.11.0-RC3', version: '2.3.10'
+    testCompile 'junit:junit:4.5'
+    testCompile "org.specs2:specs2-core_2.11:3.7.2"
+    testCompile "org.specs2:specs2-junit_2.11:3.7.2"
+    testCompile "org.apache.commons:commons-io:1.3.2"
 }
