--- a/typescript/package.json
+++ b/typescript/package.json
@@ -24,7 +24,7 @@
     "concurrently": "^3.5.0",
     "jest": "^21.0.2",
     "nodemon": "^1.12.0",
-    "shelljs": "^0.7.8",
+    "shelljs": ">=0.8.5",
     "ts-jest": "^21.0.0",
     "typescript": "^2.5.2"
   },
