Gradle wrapper for 7.5.1, requires JDK 17+

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -2,9 +2,16 @@
 apply plugin: 'java'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
+
+test {
+    testLogging {
+        events "passed", "failed"
+    }
+}
+
