--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: enter project
-        run: cd ./java
-    
       - name: Execute Gradle build
         run: ./gradlew test
+        working-directory: java
 
