--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,27 @@ permissions:
   contents: read
 
 jobs:
+  test-groovy:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: run unit tests
+        run: ./gradlew test
+        working-directory: groovy
+
   test-java:
 
     runs-on: ubuntu-latest
@@ -29,7 +50,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Execute Gradle build
+      - name: run unit tests
         run: ./gradlew test
         working-directory: java
 
