--- a/scala/build.gradle
+++ b/scala/build.gradle
@@ -1,15 +1,22 @@
 
-apply plugin: 'scala'
+plugins {
+    id 'scala'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'org.scala-lang:scala-library:2.11.7'
-
-    testCompile 'junit:junit:4.5'
-    testCompile "org.specs2:specs2-core_2.11:3.7.2"
-    testCompile "org.specs2:specs2-junit_2.11:3.7.2"
-    testCompile "org.apache.commons:commons-io:1.3.2"
+    implementation 'org.scala-lang:scala3-library_3:3.0.1'
+    testImplementation 'org.scalatest:scalatest_3:3.2.9'
+    testImplementation 'org.scalatestplus:junit-4-13_3:3.2.9.0'
+    testImplementation 'junit:junit:4.13'
 }
+
+test {
+    testLogging {
+        events "passed", "failed"
+    }
+}
+
