--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,26 @@ jobs:
         run: lein test
         working-directory: clojure
 
+  test-scala:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: run unit tests
+        run: ./gradlew test
+        working-directory: scala
+
 # --------------------------------------
 
 # not working: project is based on ancient Mono and not Dotnet Core (!!)
