--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,22 +143,25 @@ jobs:
         run: ./gradlew test
         working-directory: scala
 
-  test-javascript:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: get code
-        uses: actions/checkout@v3
-
-      - name: install
-        run: npm install
-        working-directory: javascript
-
-      - name: test
-        run: npm run test-single-run
-        working-directory: javascript
-
 # --------------------------------------
+
+# not working: ancient package.json needs to be rebuilt
+#
+#  test-javascript:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: get code
+#        uses: actions/checkout@v3
+#
+#      - name: install
+#        run: npm install
+#        working-directory: javascript
+#
+#      - name: test
+#        run: npm run test-single-run
+#        working-directory: javascript
+
 
 # not working: project is based on ancient Mono and not Dotnet Core (!!)
 #
