attempt with old Mono

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,6 +143,19 @@ jobs:
         run: ./gradlew test
         working-directory: scala
 
+# not working: project is based on ancient Mono and not Dotnet Core (!!)
+#
+  test-csharp:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+ 
+      - name: run unit tests
+        run: ./run_tests.sh
+        working-directory: csharp
+
 # --------------------------------------
 
 # not working: ancient package.json needs to be rebuilt
@@ -163,23 +176,6 @@ jobs:
 #        working-directory: javascript
 
 
-# not working: project is based on ancient Mono and not Dotnet Core (!!)
-#
-#  test-csharp:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: get code
-#        uses: actions/checkout@v3
-#
-#      - name: setup dotnet core
-#        uses: actions/setup-dotnet@v3
-#        with:
-#          dotnet-version: '3.1.x'
-#
-#      - name: run unit tests
-#        run: ./run_tests.sh
-#        working-directory: csharp
 
 # not working due to ancient project layout (not supported)
 #
