csharp commented-out

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,33 +143,33 @@ jobs:
         run: ./gradlew test
         working-directory: scala
 
+# --------------------------------------
+
 # not working: project is based on ancient Mono and not Dotnet Core (!!)
 #
-  test-csharp:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: get code
-        uses: actions/checkout@v3
- 
-      - name: install NUnit
-        run: |
-          nuget install NUnit.Runners -o ./nunit -version 2.6.4 
-          mkdir /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/nunit-console.exe /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/nunit-console.exe.config /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/nunit.framework.dll /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit-console-runner.dll /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit.util.dll /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit.core.interfaces.dll /nunit 
-          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit.core.dll /nunit 
-        working-directory: csharp
-
-      - name: run unit tests
-        run: ./run_tests.sh
-        working-directory: csharp
-
-# --------------------------------------
+#  test-csharp:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: get code
+#        uses: actions/checkout@v3
+# 
+#      - name: install NUnit
+#        run: |
+#          nuget install NUnit.Runners -o ./nunit -version 2.6.4 
+#          mkdir /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/nunit-console.exe /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/nunit-console.exe.config /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/nunit.framework.dll /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit-console-runner.dll /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit.util.dll /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit.core.interfaces.dll /nunit 
+#          cp /tmp/nunit/NUnit.Runners.2.6.4/tools/lib/nunit.core.dll /nunit 
+#        working-directory: csharp
+#
+#      - name: run unit tests
+#        run: ./run_tests.sh
+#        working-directory: csharp
 
 # not working: ancient package.json needs to be rebuilt
 #
