--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -1,25 +1,24 @@
 
 // http://peidevs.github.io
 
-buildscript {
-  ext.kotlin_version = '1.1.4'
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
+plugins {
+    id "org.jetbrains.kotlin.jvm" version "1.7.20"
 }
 
-apply plugin: 'kotlin'
-
 repositories {
-  jcenter()
+  mavenCentral()
 }
 
 dependencies {
-  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.20"
 
-  testCompile 'junit:junit:4.12'
-  testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+  testImplementation 'junit:junit:4.12'
+  testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.7.20"
 }
+
+test {
+    testLogging {
+        events "passed", "failed"
+    }
+}
+
