--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,38 @@ permissions:
   contents: read
 
 jobs:
+  cache-gradle:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+
+      - name: cache dependencies (Gradle)
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: tickle Gradle
+        run: ./gradlew --version
+        working-directory:  java
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
   test-groovy:
+    needs: cache-gradle
     runs-on: ubuntu-latest
 
     steps:
@@ -43,6 +74,7 @@ jobs:
         working-directory: groovy
 
   test-java:
+    needs: cache-gradle
     runs-on: ubuntu-latest
 
     steps:
