--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,14 @@ jobs:
         run: ./gradlew --version
         working-directory:  java
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: '17'
+      #     distribution: 'adopt'
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+      # - name: Setup Gradle
+      #   uses: gradle/gradle-build-action@v2
 
   test-groovy:
     needs: cache-gradle
@@ -105,6 +105,7 @@ jobs:
         working-directory: java
 
   test-kotlin:
+    needs: cache-gradle
     runs-on: ubuntu-latest
 
     steps:
@@ -206,6 +207,7 @@ jobs:
         working-directory: clojure
 
   test-scala:
+    needs: cache-gradle
     runs-on: ubuntu-latest
 
     steps:
