Style files apply the .editorconfig rules

--- a/break.settings.gradle
+++ b/break.settings.gradle
@@ -1,5 +1,4 @@
 // These projects are tested by Travis CI.
 //
-// TODO: figure out the problem with Ruby (probably a requirement
-// within Rake)
+// TODO: figure out the problem with Ruby (probably a requirement within Rake)
 include 'groovy','java','javascript','kotlin','python','scala'
