--- a/php/composer.json
+++ b/php/composer.json
@@ -7,7 +7,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0"
+        "php": "^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1|^10.0"
