--- a/php/composer.json
+++ b/php/composer.json
@@ -10,7 +10,7 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1|^10.0"
+        "phpunit/phpunit": "^9.1|^10.0|^11.0"
     },
     "autoload": {
         "classmap": ["src"]
