--- a/typescript/package.json
+++ b/typescript/package.json
@@ -19,14 +19,14 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "devDependencies": {
-    "@types/jest": "^28.1.0",
-    "@types/node": "^18.0.0",
-    "concurrently": "^3.6.0",
-    "jest": "^26.2.0",
-    "nodemon": "^1.19.2",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^22.9.0",
+    "concurrently": "^7.2.0",
+    "jest": "^29.4.0",
+    "nodemon": "^2.0.0",
     "shelljs": ">=0.8.5",
-    "ts-jest": "^26.2.0",
-    "typescript": "^4.2.4"
+    "ts-jest": "^29.1.0",
+    "typescript": ">=4.8.4"
   },
   "dependencies": {
   }
